<resources>
    <string name="app_name" translatable="false">Capsulate</string>
    <string name="open_preset">Open Preset</string>
    <string name="open_folder">Open Folder</string>
    <string name="open_file">Open File</string>
    <string name="start_empty">Empty File</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="folder_open_failed">Failed to open folder</string>
    <string name="file_open_failed">Failed to open file</string>
    <string name="save_file">Save file</string>
    <string name="run">Run</string>
    <string name="format">Format</string>
    <string name="reset">Reset</string>
    <string name="reset_new_seed">New seed</string>
    <string name="step_forward">Step forward</string>
    <string name="step_over">Step over</string>
    <string name="code">Code</string>
    <string name="drag">Drag</string>
    <string name="struk">Struk</string>
    <string name="stop">Stop</string>
</resources>